// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when a claim exists renders the In Progress dashboard state 1`] = `
<Fragment>
  <Title>
    Dashboard
  </Title>
  <section
    className="border-bottom border-base-lighter padding-bottom-2 margin-bottom-5"
  >
    <Heading
      level="2"
    >
      Active claims
    </Heading>
    <DashboardClaimCard
      claim={
        Claim {
          "avg_weekly_hours_worked": null,
          "claim_id": "mock-claim-id",
          "created_at": null,
          "duration_type": null,
          "hours_off_needed": null,
        }
      }
      key="mock-claim-id"
      number={1}
    />
  </section>
  <Heading
    className="margin-top-3"
    level="2"
  >
    Start a new claim
  </Heading>
  <Heading
    level="3"
  >
    To submit your claim, you will need to provide the following:
  </Heading>
  <ul
    className="usa-list"
  >
    <li>
      Contact information
    </li>
    <li>
      Employment information
    </li>
    <li>
      Why you are taking leave
    </li>
    <li>
      When you are taking leave or planning to take leave
    </li>
    <li>
      Where to send your benefits
    </li>
  </ul>
  <ButtonLink
    href="/claims/name"
    variation="outline"
  >
    Start a new claim
  </ButtonLink>
</Fragment>
`;

exports[`Index when no claims exist renders the initial blank dashboard state 1`] = `
<Fragment>
  <Title>
    Dashboard
  </Title>
  <Heading
    className="margin-top-3"
    level="2"
  >
    Start a new claim
  </Heading>
  <Heading
    level="3"
  >
    To submit your claim, you will need to provide the following:
  </Heading>
  <ul
    className="usa-list"
  >
    <li>
      Contact information
    </li>
    <li>
      Employment information
    </li>
    <li>
      Why you are taking leave
    </li>
    <li>
      When you are taking leave or planning to take leave
    </li>
    <li>
      Where to send your benefits
    </li>
  </ul>
  <ButtonLink
    href="/claims/name"
  >
    Start a new claim
  </ButtonLink>
</Fragment>
`;
